order show hover and alignment in index fixed

--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -193,6 +193,36 @@
     font-size: 20px;
   }
 }
+.order-complete-items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: larger;
+  margin: 10px 6px;
+  padding: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  h3 {
+    margin: 0;
+  }
+  .cart-order-picture {
+    img {
+      height: 100px;
+      border-radius: 5px;
+      width: 200px;
+      margin-right: 15px;
+    }
+  }
+  .cart-order-item-text {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    h4 {
+      width: 50%;
+    }
+  }
+}
 
 .order-item-checkout {
   background-color: $gray-background;
